<resources>
    <string name="app_name">Improv Tools</string>
    <string name="app_description">Improv Tools</string>
    <string name="suggestions_activity_title">Suggestion Generator</string>
<!--    <string name="suggestions_title_category">Category</string>-->
<!--    <string name="suggestions_audience_idea">Audience Idea</string>-->
    <string name="suggestions_reset_all">Reset All</string>
    <string name="navigation_app_menu">Menu</string>
    <string name="navigation_settings_category">Settings</string>
    <string name="navigation_help_and_feedback">Help and feedback</string>
    <string name="navigation_useful_tools_category">Useful Tools</string>
    <string name="settings_activity_title">Settings</string>
    <string name="timer_activity_title">Timer</string>
    <string name="go_to_suggestion_generator">Go To Suggestion Generator</string>
    <string name="go_to_settings_screen">Go to Settings screen</string>
    <string name="go_to_timer_screen">Go to Timer screen</string>
    <string name="go_to_help_and_feedback_screen">Go to Help And Feedback screen</string>
    <string name="about_version_information">Version Information</string>
    <string name="about_package_name">&lt;b>Package Name:&lt;/b> %1$s</string>
    <string name="about_version">&lt;b>Version:&lt;/b> %1$s</string>
    <string name="about_buildconfig_buildtype">&lt;b>BuildConfig Build Type:&lt;/b> %1$s</string>
    <string name="about_buildconfig_version">&lt;b>BuildConfig Version:&lt;/b> %1$s</string>
    <string name="about_buildconfig_version_code">&lt;b>BuildConfig Version Code:&lt;/b> %1$d</string>
    <string name="about_buildconfig_enable_strict_death">&lt;b>BuildConfig Enable Strict Death:&lt;/b> %1$b</string>
    <string name="about_buildconfig_enable_crashylitics">&lt;b>BuildConfig Enable Crashylitics:&lt;/b> %1$b</string>
    <string name="about_long_version_code">&lt;b>Long Version Code:&lt;/b> %1$d</string>
    <string name="about_debug_information">Debug Information</string>
    <string name="about_is_safe_mode">&lt;b>Is Safe Mode:&lt;/b> %1$b</string>
    <string name="about_copy_all">copy all</string>
    <string name="about_send_email">send email</string>
    <string name="settings_allow_reuse">Allow Reuse</string>
    <string name="about_improvtools_feature_request" translatable="false">ImprovTools Feature Request</string>
    <string name="about_contact_email_address" translatable="false">lists@eitanadler.com</string>
    <string name="navigation_open_screen_specific_menu">Open Screen Specific Menu</string>
    <string name="navigation_tips_and_advice">Tips And Advice</string>
    <string name="go_to_tips_and_advice_screen">Go to Tips And Advice</string>
    <string name="error_no_email_application_available">No email application available</string>
    <string name="shortcut_suggestions_short_label">Suggestions</string>
    <string name="shortcut_suggestions_long_label">Show Suggestions</string>
    <string name="shortcut_suggestions_disabled_label">Suggestions (disabled)</string>
    <string name="shortcut_timer_short_label">Timer</string>
    <string name="shortcut_timer_long_label">Show Timer</string>
    <string name="shortcut_timer_disabled_label">Timer (disabled)</string>
    <string name="settings_allow_analytics_cookie_storage">Allow Analytics Cookie Storage</string>
    <string name="navigation_encyclopaedia_category">Encyclopaedia</string>
    <string name="encyclopaedia_plutchiks_wheel_of_emotions">Plutchik\’s Wheel of Emotions</string>
    <string name="encyclopaedia_emotion_wheel">Emotion Wheel</string>
    <string name="encyclopaedia_tab_title_emotions">Emotions</string>
    <string name="encyclopaedia_tab_title_games">Games</string>
    <string name="encyclopaedia_tab_title_people">People</string>
    <string name="settings_tips_and_tricks_view_mode">Tips And Tricks View Mode</string>
    <string name="timer_half_time">Half Time</string>
    <string name="timer_pause">Pause</string>
    <string name="timer_reset">Reset</string>
    <string name="timer_start">Start</string>
    <string name="about_contact_info">Contact Information</string>
    <string name="about_contact_code_repo">Code Repository</string>
    <string name="encyclopaedia_tab_title_thesaurus">Thesaurus</string>
    <string name="shortcut_encyclopaedia_short_label">Encyclopaedia</string>
    <string name="shortcut_encyclopaedia_long_label">Encyclopaedia</string>
    <string name="shortcut_encyclopaedia_disabled_label">Encyclopaedia (Disabled)</string>
    <string name="navigation_games">Activities Catalog</string>
    <string name="go_to_games_screen">Go to Activities Catalog</string>
    <string name="navigation_people">People</string>
    <string name="go_to_navigation_people_screen">Go to geople screen</string>
    <string name="navigation_emotions_reference">Emotions</string>
    <string name="go_to_emotions_reference_screen">Go to Emotions screen</string>
    <string name="navigation_thesaurus">Thesaurus</string>
    <string name="go_to_thesaurus_screen">Go to Thesaurus screen</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="slotted_timer_create_new_timer">Create New Timer</string>
    <string name="slotted_timer_remove_timer">Remove timer</string>
    <string name="count_down_timer">Count Down Timer</string>
    <string name="privacy_notification_use">Notifications are used for timers and countdowns</string>
    <string name="navigation_privacy_information">Privacy Information</string>
    <string name="go_to_privacy_information">Go To Privacy Page</string>
    <string name="component_collapse_card">Collapse Card</string>
    <string name="about_show_debug_data">Show Debug Data</string>
    <string name="about_show_privacy_screen">Show Privacy Screen</string>
    <string name="navigation_legal_category">Legal</string>
    <string name="search_bar_search">Search</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_settings_category">Privacy Settings</string>
    <string name="navigation_libraries_information">Licenses</string>
    <string name="go_to_libraries_information">Go to Licences</string>
    <string name="notification_stop_watches">Stop Watches</string>
    <string name="notification_countdown">Count Down</string>
    <string name="go_to_single_word_thesaurus_view">See word details for ‘%1$s’</string>
  <string name="navigation_back_to_thesaurus">Back to %1$s</string>
    <string name="action_word">Action Word</string>
  <string name="thesaurus_word_and_synonyms">word and synonyms</string>
  <string name="about_debugging_data">Debugging Data</string>
  <string name="glossary_term">Glossary Term</string>
  <string name="navigation_glossary">Glossary</string>
  <string name="go_to_glossary">Go To Glossary</string>
    <string name="new_stopwatch_timer">New StopWatch Timer</string>
  <string name="new_countdown_timer">New CountDown Timer</string>
  <string name="open_website">Open Website</string>
  <string name="suggestions_verb">Verb</string>
  <string name="suggestions_noun">Noun</string>
  <string name="suggestions_adjective">Adjective</string>
  <string name="suggestions_adverb">Adverb</string>
    <string name="encyclopaedia_word_senses"><![CDATA[<h1>Word Senses</h1>]]></string>
  <string name="expand">Expand</string>
  <string name="collapse">Collapse</string>
    <string name="encyclopaedia_action_synonyms"><![CDATA[<h1>Action Synonyms</h1>]]></string>
  <string name="encyclopaedia_emotion_words">Emotion Words</string>
  <string name="thesaurus_synonyms">Synonyms: %1$s</string>
    <string name="encyclopaedia_tags_filter_button">Filter Tags</string>
    <string name="timer_title">Timer Title</string>
</resources>
